Halved the size of the sidebar elements to stop them from covering other UI elements.

--- a/less/carousel.less
+++ b/less/carousel.less
@@ -17,6 +17,7 @@
 	position: absolute;
 	top: 5%;
 	height: 90%;
+	width: 7%;
 
 	font-size: 45px;
 	background-image: none !important;
